Fix thumbnails and improve responsiveness on smaller phones

--- a/src/Components/Badges.module.css
+++ b/src/Components/Badges.module.css
@@ -15,3 +15,10 @@
 
     }
 }
+
+@media screen and (max-width: 531px) {
+
+    .badge{
+        margin: 13px 5px !important;
+    }
+}
